terraform/environments/singapore-prod/vpc.tf
##############################################
# Custom VPC (/16)
##############################################

resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "custom-vpc-sg"
  }
}
